salesforce/force-app/main/default/objects/OTP_Log__c/OTP_Log__c.object-meta.xml
<CustomObject>
    <label>OTP Log</label>
    <pluralLabel>OTP Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>OTP Log Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>