salesforce/force-app/main/default/objects/OTP_Log__c/fields/Attempts__c.field-meta.xml
<CustomField>
    <fullName>Attempts__c</fullName>
    <label>Attempts</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>