salesforce/force-app/main/default/objects/OTP_Log__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <label>Details</label>
    <type>Text</type>
    <length>255</length>
</CustomField>