salesforce/force-app/main/default/objects/OTP_Log__c/fields/Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Number__c</fullName>
    <label>Mobile Number</label>
    <type>Text</type>
    <length>100</length>
</CustomField>