salesforce/force-app/main/default/objects/OTP_Log__c/fields/OTP_Status__c.field-meta.xml
<CustomField>
    <fullName>OTP_Status__c</fullName>
    <label>OTP Status</label>
    <type>Text</type>
    <length>50</length>
</CustomField>