salesforce/force-app/main/default/objects/OTP_Log__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <label>Purpose</label>
    <type>Text</type>
    <length>100</length>
</CustomField>