salesforce/force-app/main/default/objects/OTP_Log__c/fields/Sent_Time__c.field-meta.xml
<CustomField>
    <fullName>Sent_Time__c</fullName>
    <label>Sent Time</label>
    <type>Text</type>
    <length>100</length>
</CustomField>