salesforce/force-app/main/default/objects/OTP_Log__c/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <label>User Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>