salesforce/force-app/main/default/objects/OTP_Log__c/fields/Verified_Time__c.field-meta.xml
<CustomField>
    <fullName>Verified_Time__c</fullName>
    <label>Verified Time</label>
    <type>Text</type>
    <length>100</length>
</CustomField>