salesforce/force-app/main/default/objects/OTP_Log__c/listViews/All_OTP_Logs.listView-meta.xml
<ListView>
    <fullName>All_OTP_Logs</fullName>
    <filterScope>Everything</filterScope>
    <label>All OTP Logs</label>

</ListView>